// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pages manage passenger types should render correctly 1`] = `
<TwoThirdsLayout
  description="Manage Passenger Type page of the Create Fares Data Service"
  errors={Array []}
  title="Manage Passenger Type - Create Fares Data Service"
>
  <CsrfForm
    action="/api/managePassengerTypes"
    csrfToken=""
    method="post"
  >
    <ErrorSummary
      errors={Array []}
    />
    <h1
      className="govuk-heading-l"
      id="define-passenger-type-page-heading"
    >
      Provide passenger type details
    </h1>
    <div
      className="govuk-form-group"
      id="type"
    >
      <fieldset
        className="govuk-fieldset"
      >
        <legend
          className="govuk-fieldset__legend govuk-fieldset__legend--m"
        >
          <h1
            className="govuk-fieldset__heading"
          >
            Select passenger type
          </h1>
        </legend>
        <div
          className="govuk-radios"
        >
          <div
            className="govuk-radios__item"
          >
            <input
              checked={false}
              className="govuk-radios__input"
              id="adult"
              name="type"
              onChange={[Function]}
              type="radio"
              value="adult"
            />
            <label
              className="govuk-label govuk-radios__label"
              htmlFor="adult"
            >
              Adult
            </label>
          </div>
          <div
            className="govuk-radios__item"
          >
            <input
              checked={false}
              className="govuk-radios__input"
              id="child"
              name="type"
              onChange={[Function]}
              type="radio"
              value="child"
            />
            <label
              className="govuk-label govuk-radios__label"
              htmlFor="child"
            >
              Child
            </label>
          </div>
          <div
            className="govuk-radios__item"
          >
            <input
              checked={false}
              className="govuk-radios__input"
              id="infant"
              name="type"
              onChange={[Function]}
              type="radio"
              value="infant"
            />
            <label
              className="govuk-label govuk-radios__label"
              htmlFor="infant"
            >
              Infant
            </label>
          </div>
          <div
            className="govuk-radios__item"
          >
            <input
              checked={false}
              className="govuk-radios__input"
              id="senior"
              name="type"
              onChange={[Function]}
              type="radio"
              value="senior"
            />
            <label
              className="govuk-label govuk-radios__label"
              htmlFor="senior"
            >
              Senior
            </label>
          </div>
          <div
            className="govuk-radios__item"
          >
            <input
              checked={false}
              className="govuk-radios__input"
              id="student"
              name="type"
              onChange={[Function]}
              type="radio"
              value="student"
            />
            <label
              className="govuk-label govuk-radios__label"
              htmlFor="student"
            >
              Student
            </label>
          </div>
          <div
            className="govuk-radios__item"
          >
            <input
              checked={false}
              className="govuk-radios__input"
              id="young_person"
              name="type"
              onChange={[Function]}
              type="radio"
              value="youngPerson"
            />
            <label
              className="govuk-label govuk-radios__label"
              htmlFor="young_person"
            >
              Young person
            </label>
          </div>
          <div
            className="govuk-radios__item"
          >
            <input
              checked={false}
              className="govuk-radios__input"
              id="anyone"
              name="type"
              onChange={[Function]}
              type="radio"
              value="anyone"
            />
            <label
              className="govuk-label govuk-radios__label"
              htmlFor="anyone"
            >
              Anyone
            </label>
          </div>
        </div>
      </fieldset>
    </div>
    <fieldset
      className="govuk-fieldset"
    >
      <legend
        className="govuk-fieldset__legend govuk-fieldset__legend--m"
      >
        <h1
          className="govuk-fieldset__heading"
        >
          Does this passenger type have an age range?
        </h1>
      </legend>
      <div
        className="govuk-form-group"
      >
        <div
          className="govuk-hint"
          id="ageRangeMin"
        >
          Minimum age (if applicable)
        </div>
        <input
          className="govuk-input govuk-input--width-5"
          id="ageRangeMin"
          name="ageRangeMin"
          onChange={[Function]}
          type="text"
          value=""
        />
      </div>
      <div
        className="govuk-form-group"
      >
        <div
          className="govuk-hint"
          id="ageRangeMax"
        >
          Maximum age (if applicable)
        </div>
        <input
          className="govuk-input govuk-input--width-5"
          id="ageRangeMax"
          name="ageRangeMax"
          onChange={[Function]}
          type="text"
          value=""
        />
      </div>
    </fieldset>
    <div
      className="govuk-form-group"
    >
      <fieldset
        className="govuk-fieldset"
      >
        <legend
          className="govuk-fieldset__legend govuk-fieldset__legend--m"
        >
          <h1
            className="govuk-fieldset__heading"
          >
            Does this passenger type require a proof document?
          </h1>
        </legend>
        <div
          className="govuk-hint"
          id="proofDocuments-hint"
        >
          Select the applicable proof document(s)
        </div>
        <div
          className="govuk-checkboxes"
          data-module="govuk-checkboxes"
        >
          <div
            className="govuk-checkboxes__item"
          >
            <input
              checked={false}
              className="govuk-checkboxes__input"
              id="membership_card"
              name="proofDocuments"
              onChange={[Function]}
              type="checkbox"
              value="membershipCard"
            />
            <label
              className="govuk-label govuk-checkboxes__label"
              htmlFor="membership_card"
            >
              Membership card
            </label>
          </div>
          <div
            className="govuk-checkboxes__item"
          >
            <input
              checked={false}
              className="govuk-checkboxes__input"
              id="student_card"
              name="proofDocuments"
              onChange={[Function]}
              type="checkbox"
              value="studentCard"
            />
            <label
              className="govuk-label govuk-checkboxes__label"
              htmlFor="student_card"
            >
              Student card
            </label>
          </div>
          <div
            className="govuk-checkboxes__item"
          >
            <input
              checked={false}
              className="govuk-checkboxes__input"
              id="identity_document"
              name="proofDocuments"
              onChange={[Function]}
              type="checkbox"
              value="identityDocument"
            />
            <label
              className="govuk-label govuk-checkboxes__label"
              htmlFor="identity_document"
            >
              Identity document
            </label>
          </div>
        </div>
      </fieldset>
    </div>
    <div
      className="govuk-form-group"
      id="name"
    >
      <h1
        className="govuk-label-wrapper"
      >
        <label
          className="govuk-label govuk-label--m"
          htmlFor="passenger_type_name"
        >
          Provide a name for your passenger type
        </label>
      </h1>
      <div
        className="govuk-hint"
        id="passenger_type_name_hint"
      >
        50 characters maximum
      </div>
      <input
        aria-describedby="passenger_type_name_hint"
        className="govuk-input"
        id="passenger_type_name"
        name="name"
        onChange={[Function]}
        type="text"
        value=""
      />
    </div>
    <input
      className="govuk-button"
      id="continue-button"
      type="submit"
      value="Add passenger type"
    />
  </CsrfForm>
</TwoThirdsLayout>
`;

exports[`pages manage passenger types should render error state on name form group when name input left blank 1`] = `
<TwoThirdsLayout
  description="Manage Passenger Type page of the Create Fares Data Service"
  errors={
    Array [
      Object {
        "errorMessage": "You must provide a name",
        "id": "name",
      },
    ]
  }
  title="Manage Passenger Type - Create Fares Data Service"
>
  <CsrfForm
    action="/api/managePassengerTypes"
    csrfToken=""
    method="post"
  >
    <ErrorSummary
      errors={
        Array [
          Object {
            "errorMessage": "You must provide a name",
            "id": "name",
          },
        ]
      }
    />
    <h1
      className="govuk-heading-l"
      id="define-passenger-type-page-heading"
    >
      Provide passenger type details
    </h1>
    <div
      className="govuk-form-group"
      id="type"
    >
      <fieldset
        className="govuk-fieldset"
      >
        <legend
          className="govuk-fieldset__legend govuk-fieldset__legend--m"
        >
          <h1
            className="govuk-fieldset__heading"
          >
            Select passenger type
          </h1>
        </legend>
        <div
          className="govuk-radios"
        >
          <div
            className="govuk-radios__item"
          >
            <input
              checked={false}
              className="govuk-radios__input"
              id="adult"
              name="type"
              onChange={[Function]}
              type="radio"
              value="adult"
            />
            <label
              className="govuk-label govuk-radios__label"
              htmlFor="adult"
            >
              Adult
            </label>
          </div>
          <div
            className="govuk-radios__item"
          >
            <input
              checked={false}
              className="govuk-radios__input"
              id="child"
              name="type"
              onChange={[Function]}
              type="radio"
              value="child"
            />
            <label
              className="govuk-label govuk-radios__label"
              htmlFor="child"
            >
              Child
            </label>
          </div>
          <div
            className="govuk-radios__item"
          >
            <input
              checked={false}
              className="govuk-radios__input"
              id="infant"
              name="type"
              onChange={[Function]}
              type="radio"
              value="infant"
            />
            <label
              className="govuk-label govuk-radios__label"
              htmlFor="infant"
            >
              Infant
            </label>
          </div>
          <div
            className="govuk-radios__item"
          >
            <input
              checked={false}
              className="govuk-radios__input"
              id="senior"
              name="type"
              onChange={[Function]}
              type="radio"
              value="senior"
            />
            <label
              className="govuk-label govuk-radios__label"
              htmlFor="senior"
            >
              Senior
            </label>
          </div>
          <div
            className="govuk-radios__item"
          >
            <input
              checked={false}
              className="govuk-radios__input"
              id="student"
              name="type"
              onChange={[Function]}
              type="radio"
              value="student"
            />
            <label
              className="govuk-label govuk-radios__label"
              htmlFor="student"
            >
              Student
            </label>
          </div>
          <div
            className="govuk-radios__item"
          >
            <input
              checked={false}
              className="govuk-radios__input"
              id="young_person"
              name="type"
              onChange={[Function]}
              type="radio"
              value="youngPerson"
            />
            <label
              className="govuk-label govuk-radios__label"
              htmlFor="young_person"
            >
              Young person
            </label>
          </div>
          <div
            className="govuk-radios__item"
          >
            <input
              checked={false}
              className="govuk-radios__input"
              id="anyone"
              name="type"
              onChange={[Function]}
              type="radio"
              value="anyone"
            />
            <label
              className="govuk-label govuk-radios__label"
              htmlFor="anyone"
            >
              Anyone
            </label>
          </div>
        </div>
      </fieldset>
    </div>
    <fieldset
      className="govuk-fieldset"
    >
      <legend
        className="govuk-fieldset__legend govuk-fieldset__legend--m"
      >
        <h1
          className="govuk-fieldset__heading"
        >
          Does this passenger type have an age range?
        </h1>
      </legend>
      <div
        className="govuk-form-group"
      >
        <div
          className="govuk-hint"
          id="ageRangeMin"
        >
          Minimum age (if applicable)
        </div>
        <input
          className="govuk-input govuk-input--width-5"
          id="ageRangeMin"
          name="ageRangeMin"
          onChange={[Function]}
          type="text"
          value="4"
        />
      </div>
      <div
        className="govuk-form-group"
      >
        <div
          className="govuk-hint"
          id="ageRangeMax"
        >
          Maximum age (if applicable)
        </div>
        <input
          className="govuk-input govuk-input--width-5"
          id="ageRangeMax"
          name="ageRangeMax"
          onChange={[Function]}
          type="text"
          value="15"
        />
      </div>
    </fieldset>
    <div
      className="govuk-form-group"
    >
      <fieldset
        className="govuk-fieldset"
      >
        <legend
          className="govuk-fieldset__legend govuk-fieldset__legend--m"
        >
          <h1
            className="govuk-fieldset__heading"
          >
            Does this passenger type require a proof document?
          </h1>
        </legend>
        <div
          className="govuk-hint"
          id="proofDocuments-hint"
        >
          Select the applicable proof document(s)
        </div>
        <div
          className="govuk-checkboxes"
          data-module="govuk-checkboxes"
        >
          <div
            className="govuk-checkboxes__item"
          >
            <input
              checked={false}
              className="govuk-checkboxes__input"
              id="membership_card"
              name="proofDocuments"
              onChange={[Function]}
              type="checkbox"
              value="membershipCard"
            />
            <label
              className="govuk-label govuk-checkboxes__label"
              htmlFor="membership_card"
            >
              Membership card
            </label>
          </div>
          <div
            className="govuk-checkboxes__item"
          >
            <input
              checked={true}
              className="govuk-checkboxes__input"
              id="student_card"
              name="proofDocuments"
              onChange={[Function]}
              type="checkbox"
              value="studentCard"
            />
            <label
              className="govuk-label govuk-checkboxes__label"
              htmlFor="student_card"
            >
              Student card
            </label>
          </div>
          <div
            className="govuk-checkboxes__item"
          >
            <input
              checked={false}
              className="govuk-checkboxes__input"
              id="identity_document"
              name="proofDocuments"
              onChange={[Function]}
              type="checkbox"
              value="identityDocument"
            />
            <label
              className="govuk-label govuk-checkboxes__label"
              htmlFor="identity_document"
            >
              Identity document
            </label>
          </div>
        </div>
      </fieldset>
    </div>
    <div
      className="govuk-form-group govuk-form-group--error"
      id="name"
    >
      <h1
        className="govuk-label-wrapper"
      >
        <label
          className="govuk-label govuk-label--m"
          htmlFor="passenger_type_name"
        >
          Provide a name for your passenger type
        </label>
      </h1>
      <div
        className="govuk-hint"
        id="passenger_type_name_hint"
      >
        50 characters maximum
      </div>
      <input
        aria-describedby="passenger_type_name_hint"
        className="govuk-input"
        id="passenger_type_name"
        name="name"
        onChange={[Function]}
        type="text"
        value=""
      />
    </div>
    <input
      className="govuk-button"
      id="continue-button"
      type="submit"
      value="Add passenger type"
    />
  </CsrfForm>
</TwoThirdsLayout>
`;

exports[`pages manage passenger types should render error state on passenger type form group when passenger type not selected 1`] = `
<TwoThirdsLayout
  description="Manage Passenger Type page of the Create Fares Data Service"
  errors={
    Array [
      Object {
        "errorMessage": "You must select a passenger type",
        "id": "type",
      },
    ]
  }
  title="Manage Passenger Type - Create Fares Data Service"
>
  <CsrfForm
    action="/api/managePassengerTypes"
    csrfToken=""
    method="post"
  >
    <ErrorSummary
      errors={
        Array [
          Object {
            "errorMessage": "You must select a passenger type",
            "id": "type",
          },
        ]
      }
    />
    <h1
      className="govuk-heading-l"
      id="define-passenger-type-page-heading"
    >
      Provide passenger type details
    </h1>
    <div
      className="govuk-form-group govuk-form-group--error"
      id="type"
    >
      <fieldset
        className="govuk-fieldset"
      >
        <legend
          className="govuk-fieldset__legend govuk-fieldset__legend--m"
        >
          <h1
            className="govuk-fieldset__heading"
          >
            Select passenger type
          </h1>
        </legend>
        <div
          className="govuk-radios"
        >
          <div
            className="govuk-radios__item"
          >
            <input
              checked={false}
              className="govuk-radios__input"
              id="adult"
              name="type"
              onChange={[Function]}
              type="radio"
              value="adult"
            />
            <label
              className="govuk-label govuk-radios__label"
              htmlFor="adult"
            >
              Adult
            </label>
          </div>
          <div
            className="govuk-radios__item"
          >
            <input
              checked={false}
              className="govuk-radios__input"
              id="child"
              name="type"
              onChange={[Function]}
              type="radio"
              value="child"
            />
            <label
              className="govuk-label govuk-radios__label"
              htmlFor="child"
            >
              Child
            </label>
          </div>
          <div
            className="govuk-radios__item"
          >
            <input
              checked={false}
              className="govuk-radios__input"
              id="infant"
              name="type"
              onChange={[Function]}
              type="radio"
              value="infant"
            />
            <label
              className="govuk-label govuk-radios__label"
              htmlFor="infant"
            >
              Infant
            </label>
          </div>
          <div
            className="govuk-radios__item"
          >
            <input
              checked={false}
              className="govuk-radios__input"
              id="senior"
              name="type"
              onChange={[Function]}
              type="radio"
              value="senior"
            />
            <label
              className="govuk-label govuk-radios__label"
              htmlFor="senior"
            >
              Senior
            </label>
          </div>
          <div
            className="govuk-radios__item"
          >
            <input
              checked={false}
              className="govuk-radios__input"
              id="student"
              name="type"
              onChange={[Function]}
              type="radio"
              value="student"
            />
            <label
              className="govuk-label govuk-radios__label"
              htmlFor="student"
            >
              Student
            </label>
          </div>
          <div
            className="govuk-radios__item"
          >
            <input
              checked={false}
              className="govuk-radios__input"
              id="young_person"
              name="type"
              onChange={[Function]}
              type="radio"
              value="youngPerson"
            />
            <label
              className="govuk-label govuk-radios__label"
              htmlFor="young_person"
            >
              Young person
            </label>
          </div>
          <div
            className="govuk-radios__item"
          >
            <input
              checked={false}
              className="govuk-radios__input"
              id="anyone"
              name="type"
              onChange={[Function]}
              type="radio"
              value="anyone"
            />
            <label
              className="govuk-label govuk-radios__label"
              htmlFor="anyone"
            >
              Anyone
            </label>
          </div>
        </div>
      </fieldset>
    </div>
    <fieldset
      className="govuk-fieldset"
    >
      <legend
        className="govuk-fieldset__legend govuk-fieldset__legend--m"
      >
        <h1
          className="govuk-fieldset__heading"
        >
          Does this passenger type have an age range?
        </h1>
      </legend>
      <div
        className="govuk-form-group"
      >
        <div
          className="govuk-hint"
          id="ageRangeMin"
        >
          Minimum age (if applicable)
        </div>
        <input
          className="govuk-input govuk-input--width-5"
          id="ageRangeMin"
          name="ageRangeMin"
          onChange={[Function]}
          type="text"
          value="15"
        />
      </div>
      <div
        className="govuk-form-group"
      >
        <div
          className="govuk-hint"
          id="ageRangeMax"
        >
          Maximum age (if applicable)
        </div>
        <input
          className="govuk-input govuk-input--width-5"
          id="ageRangeMax"
          name="ageRangeMax"
          onChange={[Function]}
          type="text"
          value="65"
        />
      </div>
    </fieldset>
    <div
      className="govuk-form-group"
    >
      <fieldset
        className="govuk-fieldset"
      >
        <legend
          className="govuk-fieldset__legend govuk-fieldset__legend--m"
        >
          <h1
            className="govuk-fieldset__heading"
          >
            Does this passenger type require a proof document?
          </h1>
        </legend>
        <div
          className="govuk-hint"
          id="proofDocuments-hint"
        >
          Select the applicable proof document(s)
        </div>
        <div
          className="govuk-checkboxes"
          data-module="govuk-checkboxes"
        >
          <div
            className="govuk-checkboxes__item"
          >
            <input
              checked={false}
              className="govuk-checkboxes__input"
              id="membership_card"
              name="proofDocuments"
              onChange={[Function]}
              type="checkbox"
              value="membershipCard"
            />
            <label
              className="govuk-label govuk-checkboxes__label"
              htmlFor="membership_card"
            >
              Membership card
            </label>
          </div>
          <div
            className="govuk-checkboxes__item"
          >
            <input
              checked={false}
              className="govuk-checkboxes__input"
              id="student_card"
              name="proofDocuments"
              onChange={[Function]}
              type="checkbox"
              value="studentCard"
            />
            <label
              className="govuk-label govuk-checkboxes__label"
              htmlFor="student_card"
            >
              Student card
            </label>
          </div>
          <div
            className="govuk-checkboxes__item"
          >
            <input
              checked={false}
              className="govuk-checkboxes__input"
              id="identity_document"
              name="proofDocuments"
              onChange={[Function]}
              type="checkbox"
              value="identityDocument"
            />
            <label
              className="govuk-label govuk-checkboxes__label"
              htmlFor="identity_document"
            >
              Identity document
            </label>
          </div>
        </div>
      </fieldset>
    </div>
    <div
      className="govuk-form-group"
      id="name"
    >
      <h1
        className="govuk-label-wrapper"
      >
        <label
          className="govuk-label govuk-label--m"
          htmlFor="passenger_type_name"
        >
          Provide a name for your passenger type
        </label>
      </h1>
      <div
        className="govuk-hint"
        id="passenger_type_name_hint"
      >
        50 characters maximum
      </div>
      <input
        aria-describedby="passenger_type_name_hint"
        className="govuk-input"
        id="passenger_type_name"
        name="name"
        onChange={[Function]}
        type="text"
        value="Regular Adult"
      />
    </div>
    <input
      className="govuk-button"
      id="continue-button"
      type="submit"
      value="Add passenger type"
    />
  </CsrfForm>
</TwoThirdsLayout>
`;
